--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+* {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
@@ -8,7 +8,7 @@
     scroll-behavior: smooth;
 }
 
-header{
+header {
     background-color: #f0f0f0;
     width: 100%;
     position: fixed;
@@ -17,10 +17,9 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 10px 200px;
-    
 }
 
-.logo{
+.logo {
     text-decoration: none;
     color: #3a6cf4;
     text-transform: uppercase;
@@ -28,7 +27,7 @@ header{
     font-size: 1.8em;
 }
 
-.navigation a{
+.navigation a {
     color: #3a6cf4;
     text-decoration: none;
     font-size: 1.1em;
@@ -36,8 +35,8 @@ header{
     padding-left: 30px;
 }
 
-.navigation a:hover{
-    color: #601cfc; 
+.navigation a:hover {
+    color: #601cfc;
 }
 
 section {
@@ -53,7 +52,7 @@ section {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-} 
+}
 
 .main h2 {
     color: #fff;
@@ -67,7 +66,7 @@ section {
     color: #4e9eff;
     font-size: 3em;
     font-weight: 600;
-}   
+}
 
 .main h3 {
     color: #fff;
@@ -103,7 +102,7 @@ section {
     padding-right: 30px;
 }
 
-.title{
+.title {
     display: flex;
     justify-content: center;
     color: #3a6cf4;
@@ -130,13 +129,13 @@ section {
 }
 
 .card:hover {
-    transform:scale(1.1);
+    transform: scale(1.1);
 }
 
 .icon {
     color: #3a6cf4;
     font-size: 8em;
-    text-align: center
+    text-align: center;
 }
 
 .info {
@@ -144,7 +143,7 @@ section {
 }
 
 .info h3 {
-    color:#3a6cf4;
+    color: #3a6cf4;
     font-size: 1.2em;
     font-weight: 700;
     margin: 10px;
@@ -152,12 +151,11 @@ section {
 
 .projects {
     background-color: #000016;
-
 }
 
-.projects .content{
+.projects .content {
     margin-top: 30px;
-}   
+}
 
 .project-card {
     background-color: #fff;
@@ -169,6 +167,7 @@ section {
     margin: 20px;
     transition: 0.7s ease;
 }
+
 .project-card:hover {
     transform: scale(1.1);
 }
@@ -176,7 +175,8 @@ section {
 .project-card:hover .project-image {
     opacity: 0.9;
 }
-.project-image img{
+
+.project-image img {
     width: 100%;
 }
 
@@ -185,9 +185,8 @@ section {
 }
 
 .project-category {
-    font-size: 0.8 em;
+    font-size: 0.8em;
     color: #000;
-
 }
 
 .project-title {
@@ -207,7 +206,7 @@ section {
     color: #601cfc;
 }
 
-.contact .icon{
+.contact .icon {
     font-size: 4.5em;
 }
 
@@ -215,7 +214,7 @@ section {
     color: #000;
 }
 
-.contact .info p{
+.contact .info p {
     font-size: 1.5em;
 }
 
@@ -224,10 +223,12 @@ section {
     color: #fff;
     padding: 2em;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
-.footer-title{
+.footer-title {
     font-size: 1.3em;
     font-weight: 600;
 }
@@ -236,53 +237,93 @@ section {
     color: #3a6cf4;
 }
 
-@media (max-widht:1023px){
-    header{
-        padding: 12px 20px;
-    }
-    .navigation a{
-        padding-left: 10px;
+/* Responsive Design */
+
+@media (max-width: 1200px) {
+    header {
+        padding: 10px 100px;
     }
 
-    .title{
-        font-size: 1.8em;
+    section {
+        padding: 100px 100px;
     }
 
-    section{
-        padding: 80px 20px;
-    }
-
-    .main-content h2{
+    .main-btn {
         font-size: 1em;
+        padding: 0.8em 1.8em;
+    }
+}
+
+@media (max-width: 768px) {
+    header {
+        padding: 10px 50px;
     }
 
-    .main-content h3{
-        font-size: 1.6em;    
+    section {
+        padding: 50px;
     }
 
-    .content{
+    .content {
         flex-direction: column;
         align-items: center;
     }
-}
 
-@media (max-widht:641px) {
-    body{
-        font-size:12px;
+    .card, .project-card {
+        width: 90%;
     }
 
-    .main-content h2 {
-        font-size: 0.8em;
+    .main h2 span {
+        font-size: 2em;
     }
 
-    .main-content h3{
-        font-size: 1.4em;
-
+    .main h3 {
+        font-size: 1.5em;
     }
 }
 
-@media (max-width:300px){
-    body{
-        font-size: 10px;
+@media (max-width: 480px) {
+    header {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navigation {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .logo {
+        font-size: 1.5em;
+    }
+
+    section {
+        padding: 20px;
+    }
+
+    .main h2 {
+        font-size: 1.2em;
+    }
+
+    .main h2 span {
+        font-size: 1.8em;
+    }
+
+    .main h3 {
+        font-size: 1.2em;
+    }
+
+    .main-btn {
+        font-size: 0.9em;
+        padding: 0.7em 1.5em;
+    }
+
+    .footer {
+        padding: 1em;
+    }
+
+    .footer-title {
+        font-size: 1em;
     }
 }
